gap fix

--- a/css/layout.css
+++ b/css/layout.css
@@ -115,7 +115,7 @@ body {
 
     .project-video {
         width: 100%;
-        height: auto;
+        height: 100%;
         object-fit: cover;
         object-position: center;
     }
